correct position mobile design

--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body{
     }
     
     #bottom{
-        top: 24.5rem;
-        right: -9.5rem;
+        top: 22rem;
+        right: -10rem;
     }
 }
 
